[gd_scene load_steps=6 format=3 uid="uid://c6hj6gf5uimwo"]

[ext_resource type="Script" path="res://scripts/hover_button.gd" id="1_ylml5"]
[ext_resource type="Texture2D" uid="uid://74t6i65txt4c" path="res://assets/pen_cursor.png" id="2_k1ybx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_olkjp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_galg2"]

[sub_resource type="Theme" id="Theme_63fva"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_hover_color = Color(1, 1, 1, 1)
Button/styles/disabled = SubResource("StyleBoxEmpty_olkjp")
Button/styles/focus = SubResource("StyleBoxEmpty_olkjp")
Button/styles/hover = SubResource("StyleBoxEmpty_olkjp")
Button/styles/normal = SubResource("StyleBoxEmpty_olkjp")
Button/styles/pressed = SubResource("StyleBoxEmpty_galg2")

[node name="hover_button" type="Node2D"]
script = ExtResource("1_ylml5")

[node name="Button" type="Button" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -27.5
offset_right = 1166.0
offset_bottom = 27.5
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = SubResource("Theme_63fva")
flat = true

[node name="Sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(156, 0)
scale = Vector2(0.0854752, 0.0854752)
texture = ExtResource("2_k1ybx")

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_2_pressed"]
